# bitgauss

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
benches/: matrix_ops.rs
bitgauss/: Cargo.toml  README.md
bitgauss/benches/: matrix_ops.rs
bitgauss/src/: binary_codes.rs  bitmatrix.rs  bitvec.rs  bitvector.rs  data.rs  graphic.rs  lib.rs
bitgauss/src/quantum_ecc/: f2n_symplectic.rs  mod.rs  pauli.rs  stabilizer.rs
demo/: f2linalg.py  getting_started.ipynb
pybindings/: Cargo.toml  bitgauss.pyi  pyproject.toml
pybindings/docs/: conf.py  requirements.txt
pybindings/docs/graphic/: GRP.java  LICENSE  README.txt
pybindings/src/: bitmatrix.rs  bitvector.rs  lib.rs
pybindings/tests/: test_bindings.py
src/: bitmatrix.rs  bitvec.rs  lib.rs
src/bitmatrix/: parallel.rs
