[package]
name = "bingauss-pybindings"
version = "0.0.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

publish = false

[lib]
name = "libbitgauss"
crate-type = ["cdylib"]

[dependencies]
bitgauss = { version = "*", path = "../bitgauss" }